--- a/css/style.css
+++ b/css/style.css
@@ -1,6 +1,6 @@
 @font-face {
     font-family: 'ItalianBreakfast-Regular';
-    src: url(./font/ItalianBreakfast-Regular.otf);
+    src: url(../dist/font/ItalianBreakfast-Regular.otf);
     font-weight: normal;
     font-style: normal;
 }
